aggiunta dinamicità pagina

--- a/app/templates/dashboardDocente.html
+++ b/app/templates/dashboardDocente.html
@@ -38,5 +38,6 @@
             </div>
         </aside>
     </div>
+<script src="{{ url_for('static', filename='javascript/dashboardDocente.js') }}"></script>
 </body>
 </html>
