--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-user"></i><br>
                     <span>Profilo</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="#" class="nav-link active">
                     <i class="fas fa-cubes"></i><br>
                     <span>Dashboard</span>
                 </a>
